# steering-microservice

./: .gitignore  .gitlab-ci.yml  .gitmessage  .travis.yml  CI_SET_UP.sh  CMakeLists.txt  Dockerfile  LICENSE  README.md  code-of-conduct.md  docker-compose.yml  testSelenium.py
.github/workflows/: cmake.yml
.gitlab/issue_templates/: Bug.md  issue.md
.gitlab/merge_request_templates/: merge-request.md
performance_testing/: Dockerfile
performance_testing/scripts/: buildMicroservices.sh  plotCSV.py  runH264.sh  runScripts.sh  runSelenium.py  runSteering.sh  runopendlv.sh  runscripts.sh  runsteering.sh  testSelenium.py
src/: CMakeLists.txt  ConeDetector.cpp  ConeDetector.h  ConeDetector.hpp  ConeVisualizer.cpp  ConeVisualizer.h  ConeVisualizer.hpp  IOCSVProducer.cpp  IOCSVProducer.h  IOHandler.cpp  IOHandler.h  IOHandler.hpp  ImageProcessing.cpp  ImageProcessing.h  ImageProcessor.cpp  ImageProcessor.h  ImageProcessor.hpp  ImageRecognitionController.cpp  ImageRecognitionController.h  ImageRecognitionController.hpp  PrimeChecker.cpp  PrimeChecker.hpp  SteeringAngleCalculator.cpp  SteeringAngleCalculator.h  SteeringAngleCalculator.hpp  SteeringMicroservice.cpp  TestPrimeChecker.cpp  helloworld.cpp  steering-microservice.cpp
test/: ConeDetectorTester.cpp  IOCSVProducerTester.cpp  IOHandlerTester.cpp  ImageProcessorTester.cpp  ImageRecognitionControllerTester.cpp  SteeringAngleCalculatorTester.cpp  tester.cpp
